--- a/src/manto-frontend/src/app/landing-page/landing-page.component.css
+++ b/src/manto-frontend/src/app/landing-page/landing-page.component.css
@@ -19,6 +19,7 @@
 .barra-lateral a {
     color:#fff;
     border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+    cursor: pointer;
 }
 
 .barra-lateral a:hover {
@@ -28,6 +29,15 @@
     color: black;
 }
 
+nav ul {
+    padding-left: 15px;
+    border-left: 1.3px dashed;
+}
+
+li:hover {
+    background-color: chocolate;
+    cursor: pointer;
+}
 
 
 /* Small devices (landscape phones, 576px and below)*/
