New Boards and New list creation is supported

--- a/src/manto-frontend/src/app/boards/lists/list-container/list-container.component.css
+++ b/src/manto-frontend/src/app/boards/lists/list-container/list-container.component.css
@@ -1,3 +1,13 @@
+
+ol {
+    padding-left: 0px; 
+    display: flex; 
+    background-color: aqua; 
+    margin-top: 8px; 
+    overflow-x: auto;
+    height: 500px;
+}
+
 ol app-list-wrapper #addListBtn{
     padding: 10px;
     background-color: white;
