--- a/src/manto-frontend/src/app/boards/board-detail/board-detail.component.css
+++ b/src/manto-frontend/src/app/boards/board-detail/board-detail.component.css
@@ -1,3 +1,7 @@
+.board-container{
+    height: 100vh;
+}
+
 .board-header{
     /*background-color: wrgb(128, 128, 128, 0.80); */
     padding: 1rem;
@@ -7,13 +11,9 @@
     border-radius: 8px;
 }   
 
-.board-container{
-    height: 100vh;
-}
-
 .board-header mat-icon:hover {
 
-    font-size: 28px;
+    scale: 1.4;
     
 }
 
