--- a/src/manto-frontend/src/app/boards/board-overview/board-overview.component.html
+++ b/src/manto-frontend/src/app/boards/board-overview/board-overview.component.html
@@ -5,21 +5,32 @@
 <h2>My Boards</h2>
 
 <div style="max-height: 60vh; overflow: auto;">
+
   <mat-grid-list cols="4" rowHeight="2:1" gutterSize="15px">
-    <mat-grid-tile> <mat-grid-tile-header>Un Header normal</mat-grid-tile-header>1</mat-grid-tile>
-    @for (item of boards; track $index) 
+
+    <mat-grid-tile class="tilesito">
+      <mat-grid-tile-header style="color: black;">New board</mat-grid-tile-header>
+      <h4>Click to add a new Board</h4>
+    </mat-grid-tile>
+
+    @for (item of BoardsList; track $index)
     {
-      <a [routerLink]="['/boards', item.id]">
-        <mat-grid-tile (click) = "onBoardSelection('1')" >
-          <mat-grid-tile-header>{{item.name}}</mat-grid-tile-header>
-          {{item.id}}
-          <mat-grid-tile-footer>
-            Con tu amor
-            <mat-icon>{{item.icon}}</mat-icon>
-          </mat-grid-tile-footer>
-        </mat-grid-tile>
-      </a>
+    <a [routerLink]="['/boards', item.boardId]">
+      <mat-grid-tile>
+        <mat-grid-tile-header>
+          {{item.boardName}}
+        </mat-grid-tile-header>
+        
+        <mat-grid-tile-footer>
+          Con tu amor
+          <mat-icon>{{"favorite"}}</mat-icon>
+        </mat-grid-tile-footer>
+        
+      </mat-grid-tile>
+    </a>
     }
+
   </mat-grid-list>
+
 </div>
 
