--- a/src/manto-frontend/src/app/boards/lists/card/card.component.scss
+++ b/src/manto-frontend/src/app/boards/lists/card/card.component.scss
@@ -3,6 +3,7 @@
   padding: 4px;
   border-radius: 0.5rem;
   cursor:pointer;
+  background-color: white;
 }
 
 
@@ -22,6 +23,6 @@
   box-shadow: 0 0 2px rgba(0,0,0,0.2);
 
   &:hover{
-    cursor: grab;
+    cursor: pointer;
   }
 }
