--- a/src/manto-frontend/src/app/boards/lists/list/list.component.html
+++ b/src/manto-frontend/src/app/boards/lists/list/list.component.html
@@ -1,17 +1,17 @@
 <div class="list-outline">
+
     <div class="list-header">
-        <input type="text" [value]="listName" />
+        <input type="text" [value]="listSpec.name" (change)="test()"/>
         <hr>
     </div>
-    <div #body>
+
+    <div class="list-body">
         <!--<button class="d-flex btn btn-warning align-items-center w-100">
             <mat-icon style="margin-right: 5px;">assignment_add</mat-icon>
             <span>Add a Card</span>
         </button>
         <hr>
         -->
-
-        <hr>
         @for (card of cardslist; track $index)
         {
             <div style="padding-bottom: 10px;">
@@ -20,7 +20,7 @@
         }
 
         @if(!isAddingCard){
-            <button class="d-flex align-items-center add-card-btn w-100" (click)="openNewCardForm()">
+            <button class="d-flex align-items-center add-card-btn w-100" (click)="toggleNewCardForm()">
                 <mat-icon>assignment_add</mat-icon>
                 <span>Add a Card</span>
             </button>
@@ -29,6 +29,7 @@
                 <textarea
                     class="cards-name-textarea"
                     name="cardName"
+                    appFocus
                     [(ngModel)]="cardName"
                     required
                     placeholder="Enter your Card's name"
@@ -39,7 +40,7 @@
                 <div class="d-flex">
                     <button type="submit" class="btn btn-success btn-sm me-1">Done</button>
                     
-                    <button type="button" class="btn btn-danger btn-sm" (click)="closeNewCardForm()">
+                    <button type="button" class="btn btn-danger btn-sm" (click)="toggleNewCardForm()">
                         <mat-icon style="min-width: 0; font-size: 18px; height: 18px; width: 18px; line-height: 1; vertical-align: middle; ">close</mat-icon>
                     </button>
                 </div>
