--- a/src/manto-frontend/src/app/boards/lists/list/list.component.scss
+++ b/src/manto-frontend/src/app/boards/lists/list/list.component.scss
@@ -2,20 +2,37 @@
     background-color: #f1f2f4;
     padding: 5px;
     border: 2px solid blue;
+
+    display: flex;
+    flex-direction: column;    // stack header, body, footer
+    //max-height: 90vh;          // grow until 90% of viewport
+    max-height: 100%;          // grow until 90% of viewport
 }
 
 
-.list-header input {
-    border: 0px;
-    width: 100%;
-    height: 40px;
-    font-size: 20px;
-    font-weight: 600;
-    background-color: transparent;
+.list-header{
+
+    flex-shrink: 0;
+
+    input {
+        border: 0px;
+        width: 100%;
+        height: 40px;
+        font-size: 20px;
+        font-weight: 600;
+        background-color: transparent;
+        cursor: pointer;
+    }
+
+    hr {
+        margin-top: 0px;
+    }
 }
 
-.list-header hr {
-    margin-top: 0px;
+.list-body{
+    flex:1;
+    overflow-y: auto;
+    padding-right: 4px;
 }
 
 .add-card-btn{
