--- a/src/manto-frontend/src/app/boards/lists/list/list.component.scss
+++ b/src/manto-frontend/src/app/boards/lists/list/list.component.scss
@@ -1,18 +1,18 @@
 .list-outline{
     background-color: #f1f2f4;
     padding: 5px;
-    border: 2px solid blue;
+    border: 4px solid blue;
 
     display: flex;
     flex-direction: column;    // stack header, body, footer
     //max-height: 90vh;          // grow until 90% of viewport
-    max-height: 100%;          // grow until 90% of viewport
+    max-height: 100%;          // grow until 100% of parent element [list-wrapper]
 }
 
 
 .list-header{
 
-    flex-shrink: 0;
+    flex: 0;
 
     input {
         border: 0px;
@@ -33,6 +33,7 @@
     flex:1;
     overflow-y: auto;
     padding-right: 4px;
+    border: 4px solid brown;
 }
 
 .add-card-btn{
