--- a/src/manto-frontend/src/app/boards/board-overview/board-overview.component.html
+++ b/src/manto-frontend/src/app/boards/board-overview/board-overview.component.html
@@ -22,7 +22,7 @@
         </mat-grid-tile-header>
         
         <mat-grid-tile-footer>
-          Con tu amor
+          Like
           <mat-icon>{{"favorite"}}</mat-icon>
         </mat-grid-tile-footer>
         
