--- a/src/manto-frontend/src/app/boards/lists/list/list.component.html
+++ b/src/manto-frontend/src/app/boards/lists/list/list.component.html
@@ -1,7 +1,7 @@
 <div class="list-outline">
 
     <div class="list-header">
-        <input type="text" [value]="listSpec.name" (change)="test()"/>
+        <input type="text" [value]="listSpec.name" (change)="changeListName($event)"/>
         <hr>
     </div>
 
